# cpp-bare-metal

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  exec.sh  link.ld
.windsurf/rules/: build-and-exec.md  use-auto.md
.windsurf/workflows/: build-and-exec.md
cmake/: create-program.cmake  riscv64-unknown-elf-clang-toolchain.cmake  riscv64-unknown-elf-gcc-toolchain.cmake  settings.cmake
setup/: CMakeLists.txt  call-main.cpp  new.cpp  syscalls.cpp  uart.cpp  uart.hpp
src/: concurrent-task.hpp  entry.s  exception.cpp  init.c  main.cpp  main.hpp  runtime-main.cpp  uart.cpp  uart.hpp
